...
    <string name="error_loading_form">Error loading form</string>
    <string name="accuracy_warning">To improve the geolocation accuracy, recapture.</string>
    <string name="download_image_content_description">Tap to download media</string>
    <string name="media_content_description">Media question response</string>
    <string name="signature_content_description">Image to display the signature</string>

    <string name="cascade_level_textview_hint">Search or select %1$s</string>
    <string name="cascade_level_textview_error">This answer is not valid</string>

    <string name="time_check_notification_title">Your phone time is inaccurate!</string>
    <string name="time_check_notification_message">Flow app may not work correctly</string>
    <string name="time_check_action_fix">Fix it</string>
    <string name="time_check_action_dismiss">Dismiss</string>
...
