<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/question_header"/>

    <EditText
            android:id="@+id/date_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:enabled="false"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"/>

    <Button
            android:id="@+id/date_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/FormButtonStyle"
            android:text="@string/pickdate"/>

</merge>
