<?xml version="1.0" encoding="utf-8"?>

<Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/submit_tab_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitbutton"
        style="@style/PrimaryButtonStyle">
</Button>