<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include
            layout="@layout/survey_activity_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <org.akvo.flow.presentation.navigation.FlowNavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">
        <include layout="@layout/navigation_layout"/>
    </org.akvo.flow.presentation.navigation.FlowNavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
