<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:flowapp="http://schemas.android.com/apk/res-auto"
      xmlns:app="http://schemas.android.com/tools">

    <item
        android:id="@+id/new_datapoint"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="100"
        android:title="@string/add_data_point"
        flowapp:showAsAction="always" />

    <!--<item android:id="@+id/search"-->
          <!--android:title="@string/search"-->
          <!--android:icon="@android:drawable/ic_menu_search"-->
          <!--flowapp:showAsAction="always"-->
          <!--android:actionViewClass="android.support.v7.widget.SearchView" />-->

    <item
        android:id="@+id/more_submenu"
        android:icon="@drawable/ic_more"
        android:orderInCategory="100"
        android:title="@string/more"
        flowapp:showAsAction="always">

        <menu>

            <item
                android:id="@+id/search"
                android:title="@string/search" />


            <item
                android:id="@+id/sync_records"
                android:title="@string/sync" />

            <item
                android:id="@+id/order_by"
                android:title="@string/sort" />

            <item
                android:id="@+id/stats"
                android:title="@string/stats" />

        </menu>

    </item>
</menu>
